--- a/css/drag-and-drop.css
+++ b/css/drag-and-drop.css
@@ -66,3 +66,14 @@
     height: 3em;
     width: 3em;
 }
+.hovered{
+    border-style: dashed;
+}
+.mask{
+    height:100%;
+    width: 100%;
+    position: absolute;
+}
+/* .play-ground:hover{
+    border-style: dashed;
+} */
