modify coin container.

--- a/css/drag-and-drop.css
+++ b/css/drag-and-drop.css
@@ -7,8 +7,7 @@
 .dot {
     
     border-radius: 50%;
-    display: relative;
-    margin: auto;
+    margin: auto auto;
 }
 .red{
     background-color: red;
